[tool.poetry]
name = "minotaur"
version = "0.1.0"
description = "A small minotaur maze game"
authors = ["QuantumEntangledAndy <sheepchaan@gmail.com>"]
license = "AGPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 79
